# ApplyAssist

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  applyassist.sh  pyproject.toml
src/applyassist/: __init__.py  __main__.py  cli.py  config.py  dashboard_server.py  database.py  filters.py  llm.py  pipeline.py  view.py
src/applyassist/apply/: chrome.py  dashboard.py  launcher.py  prompt.py
src/applyassist/config/: employers.yaml  searches.example.yaml  sites.yaml
src/applyassist/discovery/: jobspy.py  linkedin_alerts.py  smartextract.py  workday.py
src/applyassist/enrichment/: detail.py
src/applyassist/scoring/: company.py  cover_letter.py  pdf.py  scorer.py  tailor.py  validator.py
src/applyassist/wizard/: init.py
