[project]
name = "applyassist"
version = "0.4.0"
description = "AI job-search copilot: discover, score, and tailor — then you review and submit. Human-in-the-loop, not a spray bot."
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.11"
authors = [{name = "Waleed Akram Khan"}]
# ApplyAssist is a fork of ApplyPilot by Pickle-Pixel (https://github.com/Pickle-Pixel/ApplyPilot), AGPL-3.0.
keywords = ["job-search", "ai", "resume", "apply", "job-application", "human-in-the-loop", "assistant", "copilot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
]

dependencies = [
    "typer>=0.9.0",
    "rich>=13.0",
    "httpx>=0.24",
    "beautifulsoup4>=4.12",
    "playwright>=1.40",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "pandas>=2.0",
    ]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[project.scripts]
applyassist = "applyassist.cli:app"

[project.urls]
Homepage = "https://github.com/waleedakramkhan/ApplyAssist"
Repository = "https://github.com/waleedakramkhan/ApplyAssist"
Issues = "https://github.com/waleedakramkhan/ApplyAssist/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/applyassist"]

[tool.hatch.build]
artifacts = ["src/applyassist/config/*.yaml"]

[tool.ruff]
target-version = "py311"
line-length = 120
